# talking-snake

./: .gitignore  .htmlhintrc  .pre-commit-config.yaml  .stylelintrc.json  Dockerfile  README.md  README_HF.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
scripts/: generate_sample.py
src/talking_snake/: __init__.py  __main__.py  app.py  extract.py  tts.py
src/talking_snake/static/: app.js  index.html  manifest.json  styles.css
tests/: conftest.py  test_app.py  test_app_streaming.py  test_extract.py  test_tts.py
